# homunculus

./: ANTI_PARAPHRASING_SOLUTION_COMPLETE.md  ARENA_HOWTO.md  ARENA_IMPLEMENTATION_PROGRESS.md  ARENA_KNOWLEDGE_CHECKPOINT.md  ARENA_MASTER_IMPLEMENTATION_PLAN.md  CHANGELOG.md  FLOW.md  GettingStarted.md  HOW-TO-PLAY.md  LANGGRAPH_RESOLUTION_SUMMARY.md  LLM_PARAMETER_OPTIMIZATION.md  Makefile  OLLAMA_PARAMETER_OPTIMIZATION_COMPLETE.md  README.md  README_SIMPLE_CHAT.md  README_SOCKET_ARCHITECTURE.md  RESPONSE_HIDING_FIX_COMPLETE.md  agent.py  arena.yml  arena_cli.py  character-design.md  conversation_demo.py  docker-compose.arena.yml  docker-compose.core.yml  docker-compose.yml  hl-design.md  implementation-plan.md  pyproject.toml  requirements.txt  setup.sh  test_anti_paraphrasing.py  test_anti_repetition.py  test_arena_web_search.py  test_llm_parameters.py  test_ollama_parameters.py  test_response_hiding.py  test_socket_architecture.py  test_socket_connection.py  validation-0.md  verify_ollama_integration.py
arena_memories/: test_agent_profile.json
design/: agent-package.md  architecture.md  arena_implementation_progress.md  character-memory-design.md  chat-cli.md  idea.md  implementation-plan.md  infra.md  quick-start.md  schema-design.md
docs/: ARENA_CLI_GUIDE.md  setup-guide.md
scripts/: __init__.py  activate_character.py  run_character_server.py  run_chat.py  run_simple_chat.py  run_simple_remote_chat.py  setup_databases.py
src/: __init__.py  character_agent.py
tests/: test_character_agent.py  test_character_loader.py  test_core_components.py  (+8 more)
(+163 files in other folders)
