[tool.poetry]
name = "homunculus"
version = "0.1.0"
description = "AI-powered conversational agents with realistic personalities, memory, and emotional dynamics"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
# LLM and AI
langchain = "^0.1.0"
langchain-community = "^0.0.10"
langchain-core = "^0.1.0"
tavily-python = "^0.3.0"

# Databases
chromadb = "^0.4.22"
neo4j = "^5.16.0"
redis = "^5.0.1"

# Data handling
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
PyYAML = "^6.0.1"

# CLI and UI
rich = "^13.7.0"
typer = "^0.9.0"
click = "^8.1.7"
keyboard = "^0.13.5"
pynput = "^1.8.1"

# WebSocket support
websockets = "^12.0"

# Utilities
python-dotenv = "^1.0.0"
tenacity = "^8.2.3"
dataclasses-json = "^0.6.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
black = "^23.12.0"
isort = "^5.13.0"
flake8 = "^6.1.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "chromadb.*",
    "neo4j.*",
    "tavily.*",
    "langchain.*"
]
ignore_missing_imports = true